# nanoclaw

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json
.claude/: settings.local.json
container/: Dockerfile
container/agent-runner/: package-lock.json  package.json
container/aphexdna-core/: README.md  pyproject.toml
container/aphexdna-core/src/aphexdna/: __init__.py  __main__.py  attestation.py  backtest_ingest.py  canon.py  cli.py  compiler.py  diff.py  lineage.py  mcp_server.py  registry.py  scoring.py  templates.py
container/freqhub/: package.json
container/strategydna-core/: README.md  pyproject.toml
docs/: AGENT-CONTEXT.md  FREQHUB_SYSTEM_AUDIT_REPORT.md  NANOCLAW_QUICKSTART.md  NANOCLAW_SYSTEM_PROMPT.md  PERFORMANCE-QUALITY-SPEC.md  PLAN-freqhub-metrics.md  SOUL.md  TECHNICAL_ROADMAP.md
groups/global/: CLAUDE.md  MISSION.md  SOUL.md
groups/whatsapp_main/: CLAUDE.md
integrations/freqswarm/: docker-compose.yml
src/: bot-runner.ts  clawteam-bridge.ts  config.ts  console-sync.ts  container-runner.test.ts  container-runner.ts  container-runtime.ts  credential-proxy.test.ts  credential-proxy.ts  data-downloader.ts  db.ts  debug-ipc.ts  deploy-actions.ts  deploy-candidates.ts  deploy-ticker.ts  deploy-types.ts  deploy-verification.ts  group-queue.test.ts  group-queue.ts  health-ticker.ts  index.ts  ipc.ts  kata-runner.ts  luxalgo-ipc.ts  sharpe.ts  state-loaders.ts  swarm-runner.ts  task-scheduler.test.ts  task-scheduler.ts  trade-enrichment.ts  tv-inbox-poller.ts  tv-webhook.ts  types.ts  webhook-dispatcher.ts  x-ipc.ts
(+89 files in other folders)
